# tg_chat_gpt

./: .env.example  README.md  config.py  main.py  pyproject.toml
handlers/: basic.py  chatgpt_interface.py  personality_chat.py  quiz.py  random_fact.py  resume_helper.py  translator.py
services/: image_service.py  openai_service.py
